# tp_py_sanic_complex

./: .pmfp_template.json  MANIFEST.in  README.md  __main__.py.jinja  aiossecli.py  aiowscli.py  docker-compose.yml  dockerfile  pmfprc.json  setup.cfg
serv/: serv.py.jinja
test_sanic/: __main__.py  aredis_proxy.py
test_sanic/apis/: __init__.py
test_sanic/apis/usernamespace/: __init__.py  listsource.py  schema.py  source.py
test_sanic/decorators/: checkjsonschema.py
test_sanic/downloads/: __init__.py
test_sanic/downloads/tablenamespace/: __init__.py  example_tables.py
test_sanic/events/: __init__.py  sse.py
test_sanic/events/timernamespace/: __init__.py  countdown.py  listsource.py  schema.py  source.py
test_sanic/listeners/: __init__.py
test_sanic/middlewares/: __init__.py
test_sanic/models/: __init__.py  usermodel.py
test_sanic/serv/: __init__.py  serv.py
