[metadata]
name = test_sanic
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	sanic >= 21.3.4
	jsonschema >= 3.2.0
	pyloggerhelper >= 0.0.2
	sanic-openapi >= 21.3.2
	sanic_sse >= 0.3.1
	websockets >= 8.1
	sanic_cors >= 1.0.0
	sanic-testing >= 0.4.0
	tortoise-orm >= 0.17.2
	sserender >=0.0.2
	pyproxypattern >= 0.0.1
	schema-entry >= 0.1.5
	aredis >= 1.1.8
	hiredis >= 2.0.0
tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle>=6.0.0
	requests >= 2.25.1
	aiounittest >= 1.4.0
	aiohttp-sse-client >= 0.2.1
setup_requires = 
	wheel >= 0.36.2
	setuptools >= 47.1.0

[options.packages.find]
include = test_sanic
exclude = tests

